{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "f536bb6f-3a67-497e-b0c3-196e792eaaea",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "6d350cf2-daef-48ea-a271-7104d147aa70",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "aff96eca-ca1f-403e-9a13-f80735eaba1c",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "40bcec04-b67f-4b84-b7b7-3a297ca52a86",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cd8ebf71-3d7e-4a26-9681-fd26c6325db5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ac0cdefe-8ffa-4c0a-b7dc-107469b39c23",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3a45a0b2-d9b7-4587-9301-355b12215095",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left Stick",
                    "id": "264d2edd-7e3b-45a8-88bc-4843b7be5da7",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c6e24575-6e66-4758-b279-193057bdb143",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ef0cd306-1045-4daf-b97e-0f7cc61a7471",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9aba8d77-e5b1-4239-a3ce-623cea1eefff",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d7c9499a-23a9-4fe7-a47f-6b001f9f1d0b",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "96719bb8-aef4-4b74-b4e3-2d922bc16d8c",
            "actions": [
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "212f6ee1-f411-49a9-9033-021dac0187c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "67054ce0-2b78-46c3-82fe-698092172ac5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "a2d80261-1cf6-4ddb-aa66-7f308aaab761",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "4d3db568-3477-47ab-ab3d-952a125c3a73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChargeAttack",
                    "type": "PassThrough",
                    "id": "a24a7fca-0821-44d3-b353-5a73e28307e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "777d8a03-1401-4f07-8518-5781e2078583",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "03066d47-1a38-4dda-979c-a4bd029615d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchRWeapon",
                    "type": "Button",
                    "id": "dab0494d-f7bb-4c70-82ad-1e451a5fc281",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchLWeapon",
                    "type": "Button",
                    "id": "c3d6e346-c6f0-490b-80ae-0ec7d559496a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seek Left Lock On Target",
                    "type": "Button",
                    "id": "cb11a37c-cf02-4c80-9c31-d96d052de949",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seek Right Lock On Target1",
                    "type": "Button",
                    "id": "4aca756c-4d68-4dd2-8571-e04a49581ecd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "e102883a-b293-4b99-bbe4-96402cc18108",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire1",
                    "type": "Button",
                    "id": "f86c916b-eec8-4050-9a36-c19476279ef3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire2",
                    "type": "PassThrough",
                    "id": "5aa51036-2a35-4fe4-952d-d1502de2d0b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "f9386156-17e2-4c11-acc6-78a3bff3629b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d4ebfeb0-5e9f-4393-adb5-29f579409c61",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5226ab1-d500-4b72-ab34-82da1c9ce9b4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc3b2b9d-ff14-42f1-8c3e-eefb3e3ba196",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a38d268-b7b9-44a9-b8d3-e7b056fae607",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0aa1e24c-b7b5-4b35-9671-ef16a5035295",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7082f0d2-eac4-4961-8bed-46896bfb346f",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd90cfae-e134-443e-9a5a-21ee32dd5be7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d867ed3-36bb-4418-9d39-d8b376bd9bd0",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b8188d9-0efe-46d8-b7a8-68f98d904c67",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seek Left Lock On Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ddb09491-dd46-4f65-be09-277bf835d951",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seek Right Lock On Target1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42a4b175-649a-4ed9-b301-6dce25e1aeb8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83b35623-e99f-4375-a130-a11080aeed6d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChargeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30ab2c7c-7504-44d2-8980-54f74e74ff3a",
                    "path": "<Mouse>/backButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchRWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc05f2bf-2d50-4789-8c7d-52404c824e59",
                    "path": "<Mouse>/forwardButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchLWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9fc2323-1a3e-4b3d-86b5-34feec253d38",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fab3aea8-46bb-4bab-91f3-7a3f574fec51",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc5b7b9c-76f2-4e76-ae06-e4316d798e90",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c599ec3d-2852-4d88-a6d7-0445fe0bf7d5",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Camera",
            "id": "02b3b842-77dc-4dea-8532-07fea4d427db",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "3f5c66b0-0a8d-474c-b196-65d0be6c6a99",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Right Stick",
                    "id": "6f17a751-5a6d-404e-980a-8ad9af99a739",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cc2fdd36-7d7c-4740-b0b9-d98265e1b47f",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8fa7f775-e9a7-43b4-ab41-be39f4fcd756",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c0f8c882-7000-4ea0-ada5-b3e21edb6265",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3210a2c3-21a2-43af-9db8-583db1b859d6",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fa9986ba-395f-4d29-8b81-a05e380a40c1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "9922ae8a-85d1-4e79-99c5-fae7b263b648",
            "actions": [
                {
                    "name": "X",
                    "type": "Button",
                    "id": "c80d77e2-a10b-47d8-88e1-4309f9a69304",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "49cb879f-8181-44cf-823d-53e0be99407d",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e2faf91-b717-449d-9516-588565c024ca",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}